samples/_failures_safe/1761163162_c8b755_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90790a65.c: In function ‘main’:
./samples/SAFE/__tmp_90790a65.c:169:5: error: expected expression at end of input
  169 |     if (token_count ==
      |     ^~
./samples/SAFE/__tmp_90790a65.c:169:5: error: expected declaration or statement at end of input
